@@ -7,7 +7,8 @@ slv2 (UNRELEASED) unstable; urgency=low
   * Remove use of redland (librdf) in favour of Serd and Sord
   * Remove slv2_world_new_using_rdf_world and slv2_plugin_query_sparql
   * Remove separate i18n versions of functions and implement i18n everywhere
-  * Add slv2_world_filter_language (	to optionally disable i18n).
+  * Add slv2_world_set_option for runtime configuration of SLV2 features.
+  * Add SLV2_OPTION_FILTER_LANG option (to optionally disable i18n).
   * *** API BREAK ***
 
  -- David Robillard <d@drobilla.net>  (UNRELEASED)
